kube/kd-pvc/serverdepnginxfancy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kd4dt-vol-serverdep 
  labels:
    run: kd4dt-vol-server
spec:
  replicas: 1
  selector:
    matchLabels:
      run: kd4dt-vol-server
  template:
    metadata: 
      labels:
        run: kd4dt-vol-server
    spec:
      containers:
      - name: kd4dt-vol-serverdep
        image: ondh/nginx-fancyindex
        resources:
           limits:
             memory: 200Mi
             cpu: "1"
           requests:
             memory: 50Mi
             cpu: 50m
        workingDir: /kd4dt-vol
        volumeMounts:
        - mountPath: /kd4dt-vol
          name: kd4dt-vol
        - name: kd4dt-vol-nginx-conf-fancy
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
          readOnly: true
      volumes:
      - name: kd4dt-vol
        persistentVolumeClaim:
          claimName: kd4dt-vol
      - name: kd4dt-vol-nginx-conf-fancy
        configMap:
          name: kd4dt-vol-nginx-conf-fancy
          items:
            - key: nginx.conf
              path: nginx.conf
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: topology.kubernetes.io/region
                operator: In
                values:
                - us-west
              - key: kubernetes.io/hostname
                operator: NotIn
                values:
                  - suncave-17
                  - node-2-3.sdsc.optiputer.net
