kube/kd-pvc/expose_kd.yml
#letting the pod expose itself on port 8000
apiVersion: v1
kind: Service
metadata:
  labels:
    run: kd4dt-vol-server
  name: kd4dt-vol-expose
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: kd4dt-vol-server
  type: ClusterIP
